--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-plumber": "^1.2.0",
-    "gulp-replace": "^1.0.0"
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-stylus": "^2.7.0",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
