--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "gulp-replace": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-stylus": "^2.7.0",
+    "gulp-watch": "^5.0.1",
+    "json-format": "^1.0.1",
+    "make-dir": "^1.3.0",
+    "minimist": "^1.2.0",
     "run-sequence": "^2.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp",
-    "build": "gulp build"
+    "build": "gulp build",
+    "create:page": "node ./create-page.js"
   },
   "keywords": [
     "scaffold"
