--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "babel-preset-stage-3": "^6.24.1",
     "chalk": "^2.4.1",
     "del": "^3.0.0",
+    "eslint": "^5.7.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-imagemin": "^4.1.0",
@@ -23,14 +29,20 @@
     "json-format": "^1.0.1",
     "make-dir": "^1.3.0",
     "minimist": "^1.2.0",
+    "pre-commit": "^1.2.2",
     "run-sequence": "^2.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp",
     "build": "gulp build",
+    "eslint": "./node_modules/.bin/eslint . --fix",
+    "precommit": "npm run eslint",
     "create:page": "node ./create-page.js"
   },
+  "pre-commit": [
+    "eslint"
+  ],
   "keywords": [
     "scaffold"
   ],
