--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-	"miniprogramRoot": "./dist",
+	"miniprogramRoot": "dist/",
 	"description": "项目配置文件。",
 	"setting": {
 		"urlCheck": true,
@@ -9,7 +9,7 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "1.9.1",
+	"libVersion": "1.9.91",
 	"appid": "wx64024903cfb0415d",
 	"projectname": "wx-program-scaffold",
 	"condition": {}
